--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ body {
     left: 40px;
     border-radius: 20px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
