--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,24 @@ img {
     font-size: 2.5em;
 }
 
+.h2-1 {
+    background-color: greenyellow;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.h2-2 {
+    background-color: orange;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.h2-3 {
+    background-color: red;
+    border-radius: 10px;
+    padding: 10px;
+}
+
 a {
     text-decoration: none;
     color: black;
