--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 header {
     display: flex;
-    width: 800px;
+    width: 850px;
     height: 100px;
     justify-content: space-evenly;
     align-items: center;
@@ -10,20 +10,37 @@ header {
 }
 
 .home-button {
-    width: 30px;
+    width: 40px;
+    transition-duration: 300ms;
 }
 
 .next-level,
 .home {
-    font-size: 2em;
+    font-size: 1.5em;
+    font-weight: 500;
+    color: black;
+    border: 1px solid rgba(25, 0, 255, 0.7);
+    border-radius: 10px;
+    padding: 5px 10px;
+    box-shadow: 0 0 10px 2px rgba(25, 0, 255, 0.3);
+    transition-duration: 300ms;
 }
 
+.next-level:hover,
+.home:hover,
+.home-button:hover {
+    transform: scale(1.05);
+}
+
+
+
 img {
-    width: 20px;
+    width: 17px;
 }
 
 .h1 {
     font-size: 2.5em;
+    text-transform: uppercase;
 }
 
 .h2-1 {
@@ -223,7 +240,7 @@ body {
 
     .box-4 {
         top: -100px;
-        left: 1000px;
+        left: 1100px;
         width: 120px;
         height: 120px;
         border-radius: 20px;
