--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,14 @@ header {
 }
 
 .home-button {
-    width: 40px;
+    width: 30px;
     transition-duration: 300ms;
+    background-color: orange;
+    padding: 8px;
+    border-radius: 40%;
+    box-shadow: 0 0 10px 1px rgb(229, 255, 0, .4);
+    border: 1px solid rgb(255, 132, 0, .4);
+   
 }
 
 .next-level,
