--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,8 @@ header {
     background-color: orange;
     padding: 8px;
     border-radius: 40%;
-    box-shadow: 0 0 10px 1px rgb(229, 255, 0, .4);
-    border: 1px solid rgb(255, 132, 0, .4);
-   
+    box-shadow: 0 0 10px 1px rgba(255, 165, 165, 0.4);
+    border: 1px solid rgba(255, 255, 255, 0.4);
 }
 
 .next-level,
