--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ body {
     width: 200px;
     height: 200px;
     left: 40px;
+    top: 100px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -87,19 +88,19 @@ body {
     justify-content: center;
     position: relative;
     background-color: red;
-    transition-property: transform;
     transition-duration: 6000ms;
     transition-delay: 200ms;
-    transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+    transition-timing-function: ease-in;
     transform: rotate(30deg);
-    transition-property: background, transform;
+    transition-property: background, transform, top, left;
     z-index: 3;
 }
 
 .box:hover {
     background-color: blue;
-    transform: rotate(-30deg);
-    transform: translateX(660px) translateY(100px);
+    transform: rotate(0deg);
+    top: 100px;
+    left: 700px;
 }
 
 .goal {
@@ -121,6 +122,8 @@ body {
         width: 200px;
         height: 200px;
         border-radius: 20px;
+        top: 0px;
+        left: 0px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -130,16 +133,16 @@ body {
         transition-duration: 5000ms;
         transition-delay: 200ms;
         transition-timing-function: ease-in;
-        transform: translateX(300px) translateY(200px);
         transform: rotate(80deg);
-        transition-property: background, transform;
+        transition-property: background, transform, top, left;
         z-index: 3;
     }
     
     .box-1:hover {
         background-color: green;
-        transform: rotate(-30deg);
-        transform: translateX(1000px) translateY(200px);
+        transform: rotate(-90deg);
+        top: 200px;
+        left: 1000px;
     }
     
     .goal-1 {
@@ -173,14 +176,15 @@ body {
         transition-delay: 200ms;
         transition-timing-function: ease-in;
         transform: rotate(100deg);
-        transition-property: background, transform;
+        transition-property: background, transform, top, left;
         z-index: 3;
     }
     
     .box-2:hover {
         background-color: green;
-        transform: rotate(-89deg);
-        transform: translateX(-700px) translateY(200px);
+        transform: rotate(-180deg);
+        top: 240px;
+        left: 100px;
     }
     
     .goal-2 {
